Window Managers/XMonad/xmonad.errors

xmonad.hs:56:32: error:
    Data constructor not in scope: RestoreNextMinimizedWin
   |
56 |        , ("M-S-z", sendMessage RestoreNextMinimizedWin)
   |                                ^^^^^^^^^^^^^^^^^^^^^^^
